Added a comment to index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+<!--this page is just to test code -->
 <html>
     <head>
         <meta charset="utf-8">
         <title>This is just a test page</title>
     </head>
     <body>
-         <script src="promptMessage.js"></script>
+         <script src="displayBirthdays.js"></script>
     </body>
 </html>
