--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <!--this page is just to test code -->
+<!--- this doesn't do much -->
 <html>
     <head>
         <meta charset="utf-8">
