--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>This is just a test page</title>
     </head>
     <body>
+         <p>Bom dia!</p>
          <script src="displayBirthdays.js"></script>
     </body>
 </html>
